Changes for 4.0.3rc1

New features:

Bug fixes:
A.F....... [ZBX-14880] fixed misleading ldap authentication error messages (gcalenko)
..F....... [ZBX-14877] fixed style of disabled action on high contrast theme (Andzs, ashubin)
..F....... [ZBX-14606] removed strict-transport-security header from frontend (miks)
..F....... [ZBX-15020] fixed negative time selector offset when selecting time range in graph (miks)
A......... [ZBX-14977] fixed creation of unneeded database record if host prototype inventory mode is disabled; fixed validation for host and host prototype inventory mode (miks)
A......... [ZBX-15146] fixed SQL error occurred when too long IP address is attempted to be written in database (miks)
..F....... [ZBX-15148] fixed web scenario item selection in SVG graph widget (miks)
...G...... [ZBX-15107] fixed error handling in logrt[] items if regular expression for file name is not valid (Andris)
..F....... [ZBX-14800] fixed resolving of functional macros in graph widget name (Ivo)
.......PS. [ZBX-15200] fixed host, trigger and item count calculation; fixed required performance calculation (vso)
....I....T [ZBX-15158] fixed graph name for cache usage in proxy and server templates (kalimulin)
...G....S. [ZBX-15178] fixed wrong behaviour when referencing unexisting capture groups in item regexp preprocessing, general pcre code improvements (Andris, kalimulin)

--------------------------------------------------------------------------------
Changes for 4.0.2

4.0.2rc1 was released as 4.0.2 without any changes

--------------------------------------------------------------------------------
Changes for 4.0.2rc1

New features:
.......PS. [ZBXNEXT-3848] added validation of update interval, custom interval, history storage period and trend storage period in low-level discovery (vso)
....I..... [ZBXNEXT-4841] removed hardcoded locations for iconv.h and pthread.h; thanks to Helmut Grohne for the patch (kalimulin)